--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* Fondo dividido */
 body {
   margin: 0;
   font-family: "Segoe UI", sans-serif;
@@ -25,11 +24,6 @@ body {
   padding: 40px;
 }
 
-.header {
-  color: white;
-  text-align: center;
-  margin-bottom: 20px;
-}
 
 .formu {
   background-color: white;
@@ -39,7 +33,6 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   gap: 5px;
-  width: 300px;
   text-align: center;
 }
 
@@ -68,7 +61,7 @@ body {
 }
 
 .btn:hover {
-  background-color: #00b359;
+  background-color: #017c3f;
 }
 
 .desc {
