--- a/css/registro.css
+++ b/css/registro.css
@@ -120,18 +120,20 @@ html, body {
   padding: 12px 25px;
   border: none;
   border-radius: 25px;
-  text-decoration: none;
   font-weight: 700;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  display: inline-block;
-  text-align: center;
   margin-top: 15px;
+   margin-right: 15px;
+
+  
+}
+.navv {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
 
-.btn:hover {
-  background-color: #009624;
-}
 
 /* Footer al final */
 .footer {
