--- a/css/view.css
+++ b/css/view.css
@@ -98,6 +98,13 @@ body {
   transition: transform 0.2s ease;
 }
 
+article:has(.card-item) {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  text-align: center;
+}
 .card-item:hover {
   transform: scale(1.03); /*efecto cuando se pasa el curso sobre las cards*/
 }
